k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selfservice-api
  namespace: selfservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selfservice-api
  template:
    metadata:
      labels:
        app: selfservice-api
      annotations:
        prometheus.io/port: "8888"
        prometheus.io/scrape: "true"
    spec:
      serviceAccountName: selfservice-api
      volumes:
        - name: selfservice-git
          secret:
            secretName: selfservice-git
      containers:
        - name: app
          image: 579478677147.dkr.ecr.eu-central-1.amazonaws.com/selfservice-api/app:${BUILD_NUMBER}
          ports:
            - name: web
              containerPort: 8080
            - name: metrics
              containerPort: 8888
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          volumeMounts:
            - mountPath: /app/.ssh/key
              subPath: key
              name: selfservice-git
          resources:
            requests:
              memory: "150Mi"
              cpu: "50m"
            limits:
              memory: "900Mi"
              cpu: "2000m"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selfservice-api-gendis
  namespace: selfservice
  labels:
    project: selfservice
    department: devex
    app: selfservice-api-gendis
    component: selfservice-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selfservice-api-gendis
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5225"
      labels:
        app: selfservice-api-gendis
        project: selfservice
        department: devex
    spec:
      containers:
        - name: app
          image: dfdsdk/dafda-gendis:v0.9.2
          ports:
            - name: metrics
              containerPort: 5225
          resources:
            requests:
              memory: "50Mi"
              cpu: "50m"
            limits:
              memory: "200Mi"
              cpu: "200m"
