k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: selfservice
  namespace: selfservice
  labels:
    scrape-service-metrics: "true"
spec:
  ports:
    - name: external
      port: 8080
      targetPort: web
    - name: metrics
      port: 8888
      targetPort: metrics
  selector:
    app: selfservice
