k8s/ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: selfservice-api
  namespace: selfservice
spec:
  entryPoints: []
  routes:
    - kind: Rule
      match: Host(`build.dfds.cloud`) && PathPrefix(`/api`)
      priority: 101
      middlewares:
        - name: selfservice-api
          namespace: selfservice
      services:
        - kind: Service
          name: selfservice-api
          namespace: selfservice
          port: external
    - kind: Rule
      match: Host(`api.hellman.oxygen.dfds.cloud`) && PathPrefix(`/ssu/api`)
      priority: 101
      middlewares:
        - name: selfservice-api-pub
          namespace: selfservice
      services:
        - kind: Service
          name: selfservice-api
          namespace: selfservice
          port: external
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: selfservice-api
  namespace: selfservice
spec:
  stripPrefix:
    prefixes:
      - /api
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: selfservice-api-pub
  namespace: selfservice
spec:
  stripPrefix:
    prefixes:
      - /ssu/api
